--- a/menu.html
+++ b/menu.html
@@ -116,7 +116,7 @@
                 
             </div>
             <div class="full-div">
-                <p class="coffee">Snacks: </p>
+                <p class="coffee">Desserts: </p>
                 <div class="menu-div">
                     <div class="img-div">
                         <img class="img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTrHalf30poUL5BzMtlv8uqiPFsw8gDR1icsA&s" height="350px" width="300px" >
